# VOIR

./: CMakeLists.txt  README
src/: main.cpp  tracker.hpp  tracker.py
src/detector/: main.py  square_finder.py
src/tracker/: main.py  tracker.py
